deploy/apps/nginx/nginx-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-burglarr-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: burglarr.bergermeister.at # TODO: Make this variable.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-burglarr-service
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-burglarr
  labels:
    app: nginx-burglarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-burglarr
  template:
    metadata:
      labels:
        app: nginx-burglarr
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-index
              mountPath: /var/www/html/index.html
              subPath: index.html
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-burglarr-config
        - name: nginx-index
          configMap:
            name: nginx-burglarr-index

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-burglarr-service
  namespace: default
  labels:
    app: nginx-burglarr
spec:
  selector:
    app: nginx-burglarr
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
